--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,6 @@
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
-    <script src="./validate-forms.js"></script>
+    <!-- <script src="./validate-forms.js"></script> -->
   </body>
 </html>
